fix(home): include hero above builder marker

--- a/src/views/pages/index.twig
+++ b/src/views/pages/index.twig
@@ -12,7 +12,7 @@
   {# الهيرو الخاص بنا #}
   {% include 'components/home/hero.twig' %}
 
-  {# component home #}  {# ← أبقِ هذا السطر كما هو ليعرض عناصر البناء #}
+  {# component home #}  {# لا تحذفه: هذا مكان البيلدر #}
 {% endblock %}
 
 {% block scripts %}
